[REFACTOR] fixing sonar cloud issue